# codex-usage-monitor

./: Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: release.yml
docs/: installation.md  troubleshooting.md
iterations/v1-simplified-chinese/.plan/: plan.md
iterations/v1-simplified-chinese/.plan/phases/: 01-simplified-chinese.md  02-usage-display.md  03-verify-build.md
iterations/v2-codex-usage-brand/.plan/: plan.md
iterations/v2-codex-usage-brand/.plan/phases/: 01-product-identity.md  02-settings-startup-migration.md  03-verify-rebranded-build.md
iterations/v3-productization/.plan/: plan.md
iterations/v3-productization/.plan/phases/: 01-baseline-review.md  02-public-release.md  03-product-visuals.md  04-install-upgrade.md  05-reliability.md  06-usage-features.md
iterations/v4-ui-polish/.plan/: plan.md
iterations/v4-ui-polish/.plan/phases/: 01-icons-shortcuts.md  02-compact-reset-copy.md
iterations/v5-tray-provider-reliability/.plan/: plan.md
iterations/v5-tray-provider-reliability/.plan/phases/: 01-single-tray-identity.md  02-claude-cli-availability.md  (+1 more)
packaging/winget/1.6.0/: Ray.CodexUsage.installer.yaml  Ray.CodexUsage.locale.en-US.yaml  Ray.CodexUsage.yaml
scripts/: generate_icons.py  install.ps1  monitor-resources.ps1  uninstall.ps1
src/: diagnose.rs  main.rs  models.rs  native_interop.rs  poller.rs  tray_icon.rs  updater.rs  window.rs
src/localization/: dutch.rs  english.rs  french.rs  german.rs  japanese.rs  korean.rs  mod.rs  portuguese_brazil.rs  russian.rs  simplified_chinese.rs  spanish.rs  traditional_chinese.rs
