[package]
name = "codex-usage"
version = "1.6.0"
edition = "2021"
license = "MIT"
description = "Codex Usage"
homepage = "https://github.com/upstream-ray/codex-usage-monitor"
repository = "https://github.com/upstream-ray/codex-usage-monitor"

[package.metadata.winres]
CompanyName = "Ray"
ProductName = "Codex Usage"
FileDescription = "Lightweight Codex usage monitor for Windows"
OriginalFilename = "codex-usage.exe"
InternalName = "CodexUsage"
Comments = "Derived from Claude Code Usage Monitor under the MIT License"
LegalCopyright = "Original copyright (C) 2026 Code Zeno Pty Ltd; modifications (C) 2026 Ray"

[dependencies]
ureq = { version = "2", default-features = false, features = ["native-tls", "json", "proxy-from-env"] }
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
sha2 = "0.10"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
]

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
